--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,10 @@
   "version": "1.0.0",
   "type": "module",
   "main": "src/server.js",
+  "scripts": {
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js"
+  },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
