--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT=4000
-VITE_SERVER_URL="http://localhost:4000/"
+VITE_SERVER_DEV_URL="http://localhost:4000/"
+VITE_SERVER_PROD_URL="https://workspaces-test.herokuapp.com/"
