--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=4000
+AUTHOR="Paolo Rossi" 
 VITE_SERVER_DEV_URL="http://localhost:4000/"
 VITE_SERVER_PROD_URL="https://workspaces-test.herokuapp.com/"
