--- a/.eslintrc
+++ b/.eslintrc
@@ -21,5 +21,10 @@
   "plugins": ["react", "prettier"],
   "rules": {
     "react/prop-types": "off"
+  },
+  "settings": {
+    "react": {
+      "version": "detect"
+    }
   }
 }
